DuPont DevSB/src/objects/Initiative_Product__c.object
<CustomObject>
    <description>Junction object to relate Materials to Initiatives</description>
    <fields>
        <fullName>Allocation__c</fullName>
        <description>An apportionment or distribution of product, usually with an upper limit on the amount of product that can be ordered.</description>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID (Unique)</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>History_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to disallow estimates for products being retired. If checked, then estimates will be read only to pull in history data.</description>
        <label>History Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <description>Name of the Initiative associated to the Initiative-Product record.</description>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Initiative-Products</relationshipLabel>
        <relationshipName>Initiative_Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Material__c.Material_Type__c</field>
                <operation>equals</operation>
                <value>Planning</value>
            </filterItems>
            <filterItems>
                <field>Material__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$User.User_Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Initiative-Products</relationshipLabel>
        <relationshipName>Initiative_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Initiative-Product</label>
    <nameField>
        <label>Initiative Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiative-Products</pluralLabel>
    <recordTypes>
        <fullName>Pioneer_LA</fullName>
        <active>false</active>
        <label>Pioneer LA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>